MiniCpp Compiler Project/src/MiniCppParser.java
// Generated from MiniCpp.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MiniCppParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, OR=2, AND=3, EQ=4, PP=5, MM=6, NEQ=7, GT=8, LT=9, GTEQ=10, LTEQ=11, 
		PLUS=12, MINUS=13, MULT=14, DIV=15, MOD=16, POW=17, NOT=18, VIR=19, CINS=20, 
		COUTS=21, SCOL=22, DDOT=23, ASSIGN=24, OPAR=25, CPAR=26, OBRACE=27, CBRACE=28, 
		IntType=29, FloatType=30, BoolType=31, CharType=32, TRUE=33, FALSE=34, 
		NIL=35, IF=36, ELSE=37, FOR=38, WHILE=39, DO=40, LOG=41, SWITCH=42, CASE=43, 
		BREAK=44, MAIN=45, DEFAULT=46, RETURN=47, COUT=48, CIN=49, ID=50, INT=51, 
		FLOAT=52, STRING=53, CHAR=54, COMMENT=55, BlockComment=56, SPACE=57, OTHER=58;
	public static final int
		RULE_parse = 0, RULE_function_body = 1, RULE_endof_body = 2, RULE_function_declare = 3, 
		RULE_input_param = 4, RULE_block = 5, RULE_stat = 6, RULE_function_call = 7, 
		RULE_return_stat = 8, RULE_cout_stat = 9, RULE_cin_stat = 10, RULE_main_stat = 11, 
		RULE_switch_stat = 12, RULE_default_stat = 13, RULE_case_stat = 14, RULE_for_stat = 15, 
		RULE_for_ass = 16, RULE_do_while_stat = 17, RULE_assignment = 18, RULE_plusplus_stat = 19, 
		RULE_minusminus_stat = 20, RULE_declare = 21, RULE_inDeclare = 22, RULE_type = 23, 
		RULE_if_stat = 24, RULE_condition_block = 25, RULE_stat_block = 26, RULE_while_stat = 27, 
		RULE_log = 28, RULE_expr = 29, RULE_atom = 30, RULE_voidType = 31;
	private static String[] makeRuleNames() {
		return new String[] {
			"parse", "function_body", "endof_body", "function_declare", "input_param", 
			"block", "stat", "function_call", "return_stat", "cout_stat", "cin_stat", 
			"main_stat", "switch_stat", "default_stat", "case_stat", "for_stat", 
			"for_ass", "do_while_stat", "assignment", "plusplus_stat", "minusminus_stat", 
			"declare", "inDeclare", "type", "if_stat", "condition_block", "stat_block", 
			"while_stat", "log", "expr", "atom", "voidType"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'void'", "'||'", "'&&'", "'=='", "'++'", "'--'", "'!='", "'>'", 
			"'<'", "'>='", "'<='", "'+'", "'-'", "'*'", "'/'", "'%'", "'^'", "'!'", 
			"','", "'>>'", "'<<'", "';'", "':'", "'='", "'('", "')'", "'{'", "'}'", 
			"'int'", "'float'", "'bool'", "'char'", "'true'", "'false'", "'nil'", 
			"'if'", "'else'", "'for'", "'while'", "'do'", "'log'", "'switch'", "'case'", 
			"'break'", "'main'", "'default'", "'return'", "'cout'", "'cin'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, "OR", "AND", "EQ", "PP", "MM", "NEQ", "GT", "LT", "GTEQ", 
			"LTEQ", "PLUS", "MINUS", "MULT", "DIV", "MOD", "POW", "NOT", "VIR", "CINS", 
			"COUTS", "SCOL", "DDOT", "ASSIGN", "OPAR", "CPAR", "OBRACE", "CBRACE", 
			"IntType", "FloatType", "BoolType", "CharType", "TRUE", "FALSE", "NIL", 
			"IF", "ELSE", "FOR", "WHILE", "DO", "LOG", "SWITCH", "CASE", "BREAK", 
			"MAIN", "DEFAULT", "RETURN", "COUT", "CIN", "ID", "INT", "FLOAT", "STRING", 
			"CHAR", "COMMENT", "BlockComment", "SPACE", "OTHER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MiniCpp.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MiniCppParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ParseContext extends ParserRuleContext {
		public Main_statContext main_stat() {
			return getRuleContext(Main_statContext.class,0);
		}
		public TerminalNode EOF() { return getToken(MiniCppParser.EOF, 0); }
		public List<Function_declareContext> function_declare() {
			return getRuleContexts(Function_declareContext.class);
		}
		public Function_declareContext function_declare(int i) {
			return getRuleContext(Function_declareContext.class,i);
		}
		public List<Function_bodyContext> function_body() {
			return getRuleContexts(Function_bodyContext.class);
		}
		public Function_bodyContext function_body(int i) {
			return getRuleContext(Function_bodyContext.class,i);
		}
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCppListener ) ((MiniCppListener)listener).enterParse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCppListener ) ((MiniCppListener)listener).exitParse(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniCppVisitor ) return ((MiniCppVisitor<? extends T>)visitor).visitParse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parse);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(66);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
					case 1:
						{
						setState(64);
						function_declare();
						}
						break;
					case 2:
						{
						setState(65);
						function_body();
						}
						break;
					}
					} 
				}
				setState(70);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(71);
			main_stat();
			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << IntType) | (1L << FloatType) | (1L << BoolType) | (1L << CharType))) != 0)) {
				{
				{
				setState(72);
				function_body();
				}
				}
				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(78);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_bodyContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(MiniCppParser.ID, 0); }
		public TerminalNode OPAR() { return getToken(MiniCppParser.OPAR, 0); }
		public TerminalNode CPAR() { return getToken(MiniCppParser.CPAR, 0); }
		public TerminalNode OBRACE() { return getToken(MiniCppParser.OBRACE, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public Endof_bodyContext endof_body() {
			return getRuleContext(Endof_bodyContext.class,0);
		}
		public List<Input_paramContext> input_param() {
			return getRuleContexts(Input_paramContext.class);
		}
		public Input_paramContext input_param(int i) {
			return getRuleContext(Input_paramContext.class,i);
		}
		public VoidTypeContext voidType() {
			return getRuleContext(VoidTypeContext.class,0);
		}
		public Function_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCppListener ) ((MiniCppListener)listener).enterFunction_body(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCppListener ) ((MiniCppListener)listener).exitFunction_body(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniCppVisitor ) return ((MiniCppVisitor<? extends T>)visitor).visitFunction_body(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Function_bodyContext function_body() throws RecognitionException {
		Function_bodyContext _localctx = new Function_bodyContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_function_body);
		int _la;
		try {
			setState(108);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IntType:
			case FloatType:
			case BoolType:
			case CharType:
				enterOuterAlt(_localctx, 1);
				{
				setState(80);
				type();
				setState(81);
				match(ID);
				setState(82);
				match(OPAR);
				setState(86);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IntType) | (1L << FloatType) | (1L << BoolType) | (1L << CharType))) != 0)) {
					{
					{
					setState(83);
					input_param();
					}
					}
					setState(88);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(89);
				match(CPAR);
				setState(90);
				match(OBRACE);
				setState(91);
				block();
				setState(92);
				endof_body();
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 2);
				{
				setState(94);
				voidType();
				setState(95);
				match(ID);
				setState(96);
				match(OPAR);
				setState(100);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IntType) | (1L << FloatType) | (1L << BoolType) | (1L << CharType))) != 0)) {
					{
					{
					setState(97);
					input_param();
					}
					}
					setState(102);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(103);
				match(CPAR);
				setState(104);
				match(OBRACE);
				setState(105);
				block();
				setState(106);
				endof_body();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Endof_bodyContext extends ParserRuleContext {
		public TerminalNode CBRACE() { return getToken(MiniCppParser.CBRACE, 0); }
		public Endof_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_endof_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCppListener ) ((MiniCppListener)listener).enterEndof_body(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCppListener ) ((MiniCppListener)listener).exitEndof_body(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniCppVisitor ) return ((MiniCppVisitor<? extends T>)visitor).visitEndof_body(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Endof_bodyContext endof_body() throws RecognitionException {
		Endof_bodyContext _localctx = new Endof_bodyContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_endof_body);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(CBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_declareContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(MiniCppParser.ID, 0); }
		public TerminalNode OPAR() { return getToken(MiniCppParser.OPAR, 0); }
		public TerminalNode CPAR() { return getToken(MiniCppParser.CPAR, 0); }
		public TerminalNode SCOL() { return getToken(MiniCppParser.SCOL, 0); }
		public List<Input_paramContext> input_param() {
			return getRuleContexts(Input_paramContext.class);
		}
		public Input_paramContext input_param(int i) {
			return getRuleContext(Input_paramContext.class,i);
		}
		public VoidTypeContext voidType() {
			return getRuleContext(VoidTypeContext.class,0);
		}
		public Function_declareContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_declare; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCppListener ) ((MiniCppListener)listener).enterFunction_declare(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCppListener ) ((MiniCppListener)listener).exitFunction_declare(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniCppVisitor ) return ((MiniCppVisitor<? extends T>)visitor).visitFunction_declare(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Function_declareContext function_declare() throws RecognitionException {
		Function_declareContext _localctx = new Function_declareContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_function_declare);
		int _la;
		try {
			setState(136);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IntType:
			case FloatType:
			case BoolType:
			case CharType:
				enterOuterAlt(_localctx, 1);
				{
				setState(112);
				type();
				setState(113);
				match(ID);
				setState(114);
				match(OPAR);
				setState(118);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IntType) | (1L << FloatType) | (1L << BoolType) | (1L << CharType))) != 0)) {
					{
					{
					setState(115);
					input_param();
					}
					}
					setState(120);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(121);
				match(CPAR);
				setState(122);
				match(SCOL);
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 2);
				{
				setState(124);
				voidType();
				setState(125);
				match(ID);
				setState(126);
				match(OPAR);
				setState(130);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IntType) | (1L << FloatType) | (1L << BoolType) | (1L << CharType))) != 0)) {
					{
					{
					setState(127);
					input_param();
					}
					}
					setState(132);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(133);
				match(CPAR);
				setState(134);
				match(SCOL);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Input_paramContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(MiniCppParser.ID, 0); }
		public TerminalNode VIR() { return getToken(MiniCppParser.VIR, 0); }
		public Input_paramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_input_param; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCppListener ) ((MiniCppListener)listener).enterInput_param(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCppListener ) ((MiniCppListener)listener).exitInput_param(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniCppVisitor ) return ((MiniCppVisitor<? extends T>)visitor).visitInput_param(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Input_paramContext input_param() throws RecognitionException {
		Input_paramContext _localctx = new Input_paramContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_input_param);
		try {
			setState(145);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(138);
				type();
				setState(139);
				match(ID);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(141);
				type();
				setState(142);
				match(ID);
				setState(143);
				match(VIR);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCppListener ) ((MiniCppListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCppListener ) ((MiniCppListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniCppVisitor ) return ((MiniCppVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IntType) | (1L << FloatType) | (1L << BoolType) | (1L << CharType) | (1L << IF) | (1L << FOR) | (1L << WHILE) | (1L << DO) | (1L << LOG) | (1L << SWITCH) | (1L << RETURN) | (1L << COUT) | (1L << CIN) | (1L << ID) | (1L << OTHER))) != 0)) {
				{
				{
				setState(147);
				stat();
				}
				}
				setState(152);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatContext extends ParserRuleContext {
		public Token OTHER;
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public DeclareContext declare() {
			return getRuleContext(DeclareContext.class,0);
		}
		public If_statContext if_stat() {
			return getRuleContext(If_statContext.class,0);
		}
		public While_statContext while_stat() {
			return getRuleContext(While_statContext.class,0);
		}
		public Do_while_statContext do_while_stat() {
			return getRuleContext(Do_while_statContext.class,0);
		}
		public For_statContext for_stat() {
			return getRuleContext(For_statContext.class,0);
		}
		public Switch_statContext switch_stat() {
			return getRuleContext(Switch_statContext.class,0);
		}
		public LogContext log() {
			return getRuleContext(LogContext.class,0);
		}
		public Cout_statContext cout_stat() {
			return getRuleContext(Cout_statContext.class,0);
		}
		public Cin_statContext cin_stat() {
			return getRuleContext(Cin_statContext.class,0);
		}
		public Plusplus_statContext plusplus_stat() {
			return getRuleContext(Plusplus_statContext.class,0);
		}
		public Minusminus_statContext minusminus_stat() {
			return getRuleContext(Minusminus_statContext.class,0);
		}
		public Function_callContext function_call() {
			return getRuleContext(Function_callContext.class,0);
		}
		public Return_statContext return_stat() {
			return getRuleContext(Return_statContext.class,0);
		}
		public TerminalNode OTHER() { return getToken(MiniCppParser.OTHER, 0); }
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCppListener ) ((MiniCppListener)listener).enterStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCppListener ) ((MiniCppListener)listener).exitStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniCppVisitor ) return ((MiniCppVisitor<? extends T>)visitor).visitStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatContext stat() throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_stat);
		try {
			setState(169);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(153);
				assignment();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(154);
				declare();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(155);
				if_stat();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(156);
				while_stat();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(157);
				do_while_stat();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(158);
				for_stat();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(159);
				switch_stat();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(160);
				log();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(161);
				cout_stat();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(162);
				cin_stat();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(163);
				plusplus_stat();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(164);
				minusminus_stat();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(165);
				function_call();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(166);
				return_stat();
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(167);
				((StatContext)_localctx).OTHER = match(OTHER);
				System.err.println("unknown char: " + (((StatContext)_localctx).OTHER!=null?((StatContext)_localctx).OTHER.getText():null));
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_callContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(MiniCppParser.ID, 0); }
		public TerminalNode OPAR() { return getToken(MiniCppParser.OPAR, 0); }
		public List<AtomContext> atom() {
			return getRuleContexts(AtomContext.class);
		}
		public AtomContext atom(int i) {
			return getRuleContext(AtomContext.class,i);
		}
		public TerminalNode CPAR() { return getToken(MiniCppParser.CPAR, 0); }
		public TerminalNode SCOL() { return getToken(MiniCppParser.SCOL, 0); }
		public List<TerminalNode> VIR() { return getTokens(MiniCppParser.VIR); }
		public TerminalNode VIR(int i) {
			return getToken(MiniCppParser.VIR, i);
		}
		public Function_callContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_call; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCppListener ) ((MiniCppListener)listener).enterFunction_call(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCppListener ) ((MiniCppListener)listener).exitFunction_call(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniCppVisitor ) return ((MiniCppVisitor<? extends T>)visitor).visitFunction_call(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Function_callContext function_call() throws RecognitionException {
		Function_callContext _localctx = new Function_callContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_function_call);
		try {
			int _alt;
			setState(198);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(171);
				match(ID);
				setState(172);
				match(OPAR);
				setState(178);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(173);
						atom();
						setState(174);
						match(VIR);
						}
						} 
					}
					setState(180);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
				}
				setState(181);
				atom();
				setState(182);
				match(CPAR);
				setState(183);
				match(SCOL);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(185);
				match(ID);
				setState(186);
				match(OPAR);
				setState(192);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(187);
						atom();
						setState(188);
						match(VIR);
						}
						} 
					}
					setState(194);
					_errHandler.sync(this);
